# arbor

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/analysis/: exceptions.rs  grouping.rs  indexer.rs  mod.rs  none_sources.rs  traversal.rs
src/assets/: arbor.md
src/cli/: analyze.rs  database.rs  mod.rs  query.rs
src/core/: config.rs  database.rs  mod.rs  paths.rs  types.rs
src/output/: json.rs  markdown.rs  mod.rs
src/plugins/python/: extractor.rs  parser.rs  resolver.rs
tests/: indexer_test.rs  resolver_test.rs  traversal_test.rs
tests/fixtures/: custom_exceptions.py  exceptions_and_none.py  network_module.py  simple_module.py
tests/fixtures/mypackage/: __init__.py  api.py  models.py  utils.py
